--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@babel/core": "^7.12.3",
     "@babel/plugin-transform-arrow-functions": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
+    "@types/lodash": "^4.14.165",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "@types/react-select": "^3.0.23",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "fibers": "^5.0.0",
@@ -30,10 +33,13 @@
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.3.0"
+    "webpack-merge": "^5.3.0",
+    "worker-loader": "^3.0.5"
   },
   "dependencies": {
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-select": "^3.1.0"
   }
 }
