--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "outDir": "./build/",
-        "target": "es5",
+        "target": "es6",
         "allowJs": true,
         "sourceMap": true,
         "esModuleInterop": true,
@@ -11,11 +11,12 @@
         "module": "esnext",
         "moduleResolution": "node",
         "resolveJsonModule": true,
-        "isolatedModules": true,
+        "isolatedModules": false,
         "jsx": "react",
         "lib": [
             "es2015",
-            "dom"
+            "dom",
+            "webworker"
         ],
         "skipLibCheck": false
     }
