--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.12.3",
     "@babel/plugin-transform-arrow-functions": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
+    "@types/chart.js": "^2.9.27",
     "@types/lodash": "^4.14.165",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
@@ -37,8 +38,10 @@
     "worker-loader": "^3.0.5"
   },
   "dependencies": {
+    "chart.js": "^2.5.0",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-select": "^3.1.0"
   }
