--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "worker-loader": "^3.0.5"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
     "chart.js": "^2.5.0",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
